// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ship API service getAppVersion fetches a version for an app 1`] = `
Object {
  "appSlug": "an-app-slug",
  "buildNumber": "456",
  "id": 123,
  "publicInstallPageURL": "def.a.valid.url",
  "publicInstallPageUrl": undefined,
}
`;

exports[`Ship API service getAppVersionEvents fetches the events for an app version 1`] = `
Array [
  Object {
    "createdAt": 2019-10-10T00:00:00.000Z,
    "id": "an-id",
    "logDownloadUrl": "http://log.url",
    "status": "in-progress",
    "text": "some-string",
    "updatedAt": 2019-10-11T00:00:00.000Z,
  },
]
`;

exports[`Ship API service getAppVersionList fetches a list of versions for an app 1`] = `
Array [
  Object {
    "appSlug": "an-app-slug",
    "buildNumber": "456",
    "id": 123,
  },
]
`;

exports[`Ship API service getSettings fetches settings for an app 1`] = `
Object {
  "androidSettings": Object {
    "artifactExposingWorkflows": "All",
    "selectedKeystoreFile": Object {
      "name": "abcdefghijkl1234567",
    },
    "selectedServiceAccountJsonFile": Object {
      "name": "abcdefghijkl12345671566",
    },
    "track": "Release",
  },
  "certificates": Array [
    Object {
      "name": "iPhone Developer: John Doe (ABCD1234)",
    },
    Object {
      "name": "iPhone Developer: John Doe (ABCD5678)",
    },
  ],
  "iosSettings": Object {
    "appSku": "Fill",
    "appSpecificPassword": "Fill",
    "appleDeveloperAccountEmail": "Fill",
    "artifactExposingWorkflows": "All",
    "selectedCertificate": Object {
      "name": "iPhone Developer: John Doe (ABCD5678)",
    },
    "selectedProvProfile": Object {
      "name": "abcdefghijkl1234567",
    },
  },
  "keystoreFiles": Array [
    Object {
      "name": "abcdefghijkl1234567",
    },
    Object {
      "name": "abcdefghijkl12345671566",
    },
  ],
  "projectType": "android",
  "provProfiles": Array [
    Object {
      "name": "abcdefghijkl1234567",
    },
    Object {
      "name": "abcdefghijkl12345671566",
    },
  ],
  "serviceAccountJsonFiles": Array [
    Object {
      "name": "abcdefghijkl1234567",
    },
    Object {
      "name": "abcdefghijkl12345671566",
    },
  ],
}
`;

exports[`Ship API service updateAppVersion updates a version for an app 1`] = `
Object {
  "appSlug": "an-app-slug",
  "buildNumber": "456",
  "id": 123,
}
`;

exports[`Ship API service updateSettings updates settings for an app 1`] = `undefined`;

exports[`Ship API service uploadScreenshots calls the api 1`] = `
Array [
  Object {
    "filename": "some-file.png",
    "uploadUrl": "http://some.url?token=123",
  },
]
`;
